# linda

./: db.sqlite3  pyproject.toml  requirements.txt  wasmer.toml
accounts/: admin.py
accounts/migrations/: 0001_initial.py
bankcard/: admin.py
bankcard/migrations/: 0001_initial.py
core/templates/core/: base.html  transactions.html
mysite/: settings.py  urls.py
transactions/: admin.py  models.py
transactions/migrations/: 0001_initial.py
