[project]
name = "my_django_app"
version = "0.1.0"
description = "A Django web app running on Wasmer"
authors = [{ name = "Full Blessing" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "django==5.2.7",
    "djangorestframework==3.15.2",
    "django-cors-headers==4.4.0",
    "django-environ==0.11.2",
    "django-filter==24.3",
    "django-storages==1.14.3",
    "whitenoise==6.7.0",
    "gunicorn==23.0.0",
    "boto3==1.35.25",
    "cloudinary==1.44.1",
    "pillow==10.4.0",
    "lxml==4.9.3",
    "qrcode==7.4.2",
    "requests==2.32.3",
    "html5lib==1.1",
    "PyJWT==2.9.0",
    "cryptography==43.0.1",
    "tzdata==2024.2",
    "uvicorn==0.38.0"
]

[tool.uv]
index-url = "https://pypi.org/simple"

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"
