[project]
name = "my_django_app"
version = "0.1.0"
description = "A Django banking system with Cloudinary, Admin Soft Dashboard, and REST API support"
authors = [{ name = "Full Blessing" }]
readme = "README.md"
requires-python = ">=3.11"


dependencies = [
    # --- Core Framework ---
    "Django==5.1.6",
    "dj-database-url==2.3.0",
    "whitenoise==6.8.2",
    "django-cors-headers==4.4.0",
    "django-storages==1.14.4",
    "django-cloudinary-storage==0.3.0",
    "djangorestframework==3.15.2",
    "django-environ==0.11.2",
    "django-filter==24.3",
    "gunicorn==23.0.0",

    # --- Database Clients ---
    "mysqlclient==2.2.7",
    "psycopg>=3.2",

    # --- Utilities & Helpers ---
    "boto3==1.35.25",
    "requests==2.32.3",
    "packaging==24.1",
    "future==1.0.0",
    "tzdata==2025.1",
    "tzlocal==5.2",
    "user-agents==2.2.0",
    "geocoder==1.38.1",
    "ratelim==0.1.6",
    "ua-parser==0.18.0",
    "uritools==4.0.3",
    "six==1.16.0",
    "typing_extensions==4.12.2",
    "decorator==5.1.1",

    # --- PDF / Reporting / Image ---
    "reportlab==4.1.0",
    "svglib==1.5.1",
    "xhtml2pdf==0.2.16",
    "pillow==10.4.0",
    "lxml==4.9.4",
    "qrcode==7.4.2",
    "pypdf==5.0.0",
    "pyhanko==0.25.0",
    "pyhanko-certvalidator==0.26.3",

    # --- HTML / Parsing / Rendering ---
    "html5lib==1.1",
    "tinycss2==1.3.0",
    "cssselect2==0.7.0",
    "webencodings==0.5.1",
    "PyJWT==2.9.0",
    "cryptography==43.0.1",

    # --- Runtime ---
    "uvicorn==0.38.0",
]

[tool.wasmer]
entrypoint = "gunicorn mysite.wsgi:application --bind 0.0.0.0:${PORT:-8000}"

[tool.wasmer.env]
DJANGO_SETTINGS_MODULE = "mysite.settings"
PYTHONUNBUFFERED = "1"

[tool.uv]
index-strategy = "unsafe-best-match"
index-url = "https://pypi.org/simple"
dev-dependencies = [
    "pytest",
    "black",
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"
